# jaundice-rate

./: README.md  articles.py  constants.py  main.py  pyproject.toml  requirements.txt  server.py  statuses.py  text_tools.py
tests/: test_process_ariticles.py
