[tool.poetry]
name = "jaundice-rate"
version = "0.1.0"
description = ""
authors = ["alpden550 <alpden550@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.*"
cchardet = "2.*"
aiodns = "2.*"
beautifulsoup4 = "4.*"
requests = "2.*"
pytest = "5.*"
pymorphy2 = "0.8"
pymorphy2-dicts = "2.*"
DAWG-Python = "0.7.*"
aiofiles = "^0.6.0"
anyio = "^2.0.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
